--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -1,4 +1,4 @@
-@include media-breakpoint-up(md) {
+@include media-breakpoint-up(sm) {
   .navbar-dark {
     background-color: transparent!important;
   }
